--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "functions": {
-    "api/ask.py": {
+    "api/app.py": {
       "runtime": "vercel-python@0.8.0"
     }
   },
   "routes": [
-    { "src": "/ask", "dest": "/api/ask.py" }
+    { "src": "/ask", "dest": "/api/app.py" }
   ]
 }
