--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,1 +1,10 @@
-fwfs
+{
+  "functions": {
+    "api/app.py": {
+      "runtime": "vercel-python@0.8.0"
+    }
+  },
+  "routes": [
+    { "src": "/ask", "dest": "/api/app.py" }
+  ]
+}
